data/derived/sp14/progs/unify/prog4376.ml.out
Characters 93-109:
  | h::t -> f (fun x -> x) h in
            ^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
